[tool.poetry]
name = "starwars"
version = "0.1.0"
description = ""
authors = ["MrTangle <alexibanez86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
requests = "^2.28.2"
yapf = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
